

# 26-05-2022
Sistemato lo schema del progetto, ora i file php che interragiscono solamente col db per le operazioni CRUD vengono messi nella cartella /api.
Completato il modificaConferenza.php con la creazione e visualizzazione delle sessioni, le quali porta al file modificaSessione.php (creato e connesso al proprio CSS e JS file), dove si visualizza le sessioni attualmente presenti, insieme alle presentazioni associato.
Nel modificaSessione.php è presente anche il form per aggiungere Presentazioni, sia di tipo Tutorial che di tipo Articolo (da completare con gli altri campi ove neccessario).
Entrambi i form porteranno al file /api/admin/aggiungiPresentazione.php (da creare)
TODO: Capire come si vuole continuare e creare il file aggiungiPresentazione dove si controllano se i dati inseriti son corretti.


[COMPLETE]
! Creato visualizzazione Sessioni dentro alla modifica conferenza !
TODO: metterlo anche su dettagli.php [COMPLETE]

| Bisogna aggiungere al Articolo, gli input "AUTORI[index]" con nome e cognome (formato nome,cognome), poi dopo che lo si crea, l'admin può assegnare un Presenter alla Presentazione, basta che quest'ultimo abbia lo stesso Nome e Cognome |

# 30-05-2022
[COMPLETE] Gestione Errore di Iscrizione
[COMPLETE] Creazione di Tutorial e Controllo di eventuali "Sovrapposizioni" nell'orario.
[COMPLETE] Modifica Sessione, con la possibilità di aggiungere e modificare il link e i dati.

# 31-05-2022
[COMPLETE] Creazione di Articoli, con inserimento degli Autori e Parole Chiave (PDF compreso)
[COMPLETE] Piccoli Bug & Fix sul database e codice SQL
[Nota] Viene escluso da Github tutti i file PDF corrispondenti agli articoli presenti sul Database.

[TODO] Sarebbe opportuno controllare dove si richiama una query direttamente e modificarlo usando una stored procedure.
[TODO] Portare tutte le operazioni di Scrittura del DB nella cartella Api, quindi distaccato dal file principale.