@@ -32,7 +32,6 @@ if ($res->rowCount() > 0){
     header("Refresh: 2; URL=/conferenze/dettagli.php?Anno=$anno&Acronimo=$acronimo");
     exit;
 }
-echo "Registrato correttamente!";
 
 echo "Registrato correttamente!<br>Sarai rendeirizzato automaticamente alla pagina della conferenza";
 header("Refresh: 2; URL=/conferenze/dettagli.php?Anno=$anno&Acronimo=$acronimo");
